syntax = "proto3";

package p2p;

option go_package = "./proto";

service PeerService {
    rpc ListPeers(PeerRequest) returns (PeerResponse);
    rpc DownloadFile(DownloadRequest) returns (DownloadResponse);
}

message PeerRequest {}

message PeerResponse {
    repeated string peers = 1;
}

message DownloadRequest {
    string file_name = 1;
}

message DownloadResponse {
    string file_name = 1;
    string status = 2;
}
